<resources>
    <string name="app_name">Basic_Calculator</string>

    //numbers
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    //opterator
    <string name="clear">C</string>
    <string name="paranthesis">( )</string>
    <string name="exponential">^</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="subtract">-</string>
    <string name="plus">+</string>
    <string name="equalto">=</string>
    <string name="dot">.</string>
    <string name="plusandminus">+/-</string>

    <string name="backspace"> </string>
    <string name="dispaly">Enter any value</string>
    <string name="none">none</string>

</resources>