<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        tools:layout_editor_absoluteX="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#EA0101"
                android:onClick="clearbtn"
                android:text="@string/clear"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/paranthesis"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="parenthesisbtn"
                android:text="@string/paranthesis"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/exponential"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="exponentialbtn"
                android:text="@string/exponential"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="dividebtn"
                android:text="@string/divide"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sevenbtn"
                android:text="@string/seven"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="eightbtn"
                android:text="@string/eight"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="ninebtn"
                android:text="@string/nine"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="multiplicationbtn"
                android:text="@string/multiply"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fourbtn"
                android:text="@string/four"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="fivebtn"
                android:text="@string/five"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="sixbtn"
                android:text="@string/six"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="subtractbtn"
                android:text="@string/subtract"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="onebtn"
                android:text="@string/one"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="twobtn"
                android:text="@string/two"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="threebtn"
                android:text="@string/three"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="plusbtn"
                android:text="@string/plus"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/plusorminus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="plusminusbtn"
                android:text="@string/plusandminus"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="zerobtn"
                android:text="@string/zero"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/dot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="dotbtn"
                android:text="@string/dot"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/equalto"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#00B95F"
                android:onClick="equalbtn"
                android:text="@string/equalto"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />
        </TableRow>


    </TableLayout>

    <ImageButton
        android:id="@+id/backspace"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/none"
        android:onClick="backspacebtn"
        android:text="@string/backspace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backspacebtn"
        tools:ignore="UsingOnClickInXml" />

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/dispaly"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414"
        tools:ignore="LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>